--- a/UI/index.html
+++ b/UI/index.html
@@ -24,14 +24,14 @@ body {
 <script>
 
 var margin = {top: 20, right: 20, bottom: 30, left: 40},
-    width = 960 - margin.left - margin.right,
+    width = 1400 - margin.left - margin.right,
     height = 500 - margin.top - margin.bottom;
 
 var x = d3.scale.linear()
     .range([0, width]);
 
 var y = d3.scale.linear()
-    .range([height, 0]);
+    .range([height / 3, 0]);
 
 var color = d3.scale.category10();
 
@@ -43,102 +43,115 @@ var yAxis = d3.svg.axis()
     .scale(y)
     .orient("left");
 
-var svg = d3.select("body").append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+const generateGraph = (svg, data, x, y, height) => {
+	d3.tsv("data.csv", function(error, _data) {
+	  if (error) throw error;
 
-const generateData = () => {
+	  data.forEach(function(d) {
+	    d.saleValue = +d.saleValue;
+	    d.blockHeight = +d.blockHeight;
+	  });
+
+	  svg.append("g")
+	      .attr("class", "x axis")
+	      .attr("transform", "translate(0," + height + ")")
+	      .call(xAxis)
+	    .append("text")
+	      .attr("class", "label")
+	      .attr("x", width)
+	      .attr("y", -6)
+	      .style("text-anchor", "end")
+	      .text("Execution Block Height");
+
+	  svg.append("g")
+	      .attr("class", "y axis")
+	      .call(yAxis)
+	    .append("text")
+	      .attr("class", "label")
+	      .attr("transform", "rotate(-90)")
+	      .attr("y", 6)
+	      .attr("dy", ".71em")
+	      .style("text-anchor", "end")
+	      .text("Initial Auction Price")
+
+	  /* svg.selectAll(".dot")
+	      .data(data)
+	    .enter().append("circle")
+	      .attr("class", "dot")
+	      .attr("r", 3.5)
+	      .attr("cx", function(d) { return x(d.blockHeight); })
+	      .attr("cy", function(d) { return y(d.saleValue); })
+	      .style("fill", function(d) { return color(d.species); }); */
+
+	  svg.selectAll(".bars_")
+	      .data(data)
+	    .enter().append("rect")
+	      .attr("class", "bars_")
+	      .attr("x", (d) => x(d.blockHeight))
+	      .attr("y", (d) => y(d.saleValue))
+	      .attr("width", 0.5)
+	      .attr("height", (d) => height - y(d.saleValue))
+	      .style("fill", (d) => color(d.species));
+
+	});
+}
+
+const generateData = (count) => {
 	// blockHeight,saleValue
 	// 100,1000,10000
-	const data1 = _.times(31, (i) => {
+	const data1 = _.times(count, (i) => {
 		return {
-			blockHeight: 100 + i%31,
+			blockHeight: 100 + i%count,
 			saleValue: _.random(0.1, 10.0),
-			issued: 0 + i%31,
+			issued: 0 + i%count,
+			duration: 100
 		}
 	})
-	const data2 = _.times(31, (i) => {
+	const data2 = _.times(count, (i) => {
 		return {
-			blockHeight: 400 + i%31,
+			blockHeight: 400 + i%count,
 			saleValue: _.random(0.1, 10.0),
-			issued: 0 + i%31,
+			issued: 0 + i%count,
+			duration: 400
 		}
 	})
-	const data3 = _.times(31, (i) => {
+	const data3 = _.times(count, (i) => {
 		return {
-			blockHeight: 5200 + i%31,
+			blockHeight: 2200 + i%count,
 			saleValue: _.random(0.1, 10.0),
-			issued: 0 + i%31,
+			issued: 0 + i%count,
+			duration: 2200
 		}
 	})
 
 	return _.concat(data1, data2, data3);
 }
 
-/* How to represent the data
-   - 3 "swimlanes"
-   - height of the bars reflect the same price @ issue
-*/
-
-d3.tsv("data.csv", function(error, data) {
-  if (error) throw error;
-
-  data = generateData();
-  console.log(data)
+var svg1 = d3.select("body").append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height/3 + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
 
+var svg2 = d3.select("body").append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height/3 + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-  data.forEach(function(d) {
-    d.saleValue = +d.saleValue;
-    d.blockHeight = +d.blockHeight;
-  });
+var svg3 = d3.select("body").append("svg")
+    .attr("width", width + margin.left + margin.right)
+    .attr("height", height/3 + margin.top + margin.bottom)
+  .append("g")
+    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-  x.domain(d3.extent(data, function(d) { return d.blockHeight; })).nice();
-  y.domain(d3.extent(data, function(d) { return d.saleValue; })).nice();
+data = generateData(1000);
+x.domain(d3.extent(data, function(d) { return d.blockHeight; })).nice();
+y.domain(d3.extent(data, function(d) { return d.saleValue; })).nice();
 
-  svg.append("g")
-      .attr("class", "x axis")
-      .attr("transform", "translate(0," + height + ")")
-      .call(xAxis)
-    .append("text")
-      .attr("class", "label")
-      .attr("x", width)
-      .attr("y", -6)
-      .style("text-anchor", "end")
-      .text("Sepal Width (cm)");
-
-  svg.append("g")
-      .attr("class", "y axis")
-      .call(yAxis)
-    .append("text")
-      .attr("class", "label")
-      .attr("transform", "rotate(-90)")
-      .attr("y", 6)
-      .attr("dy", ".71em")
-      .style("text-anchor", "end")
-      .text("Sepal Length (cm)")
-
-  svg.selectAll(".dot")
-      .data(data)
-    .enter().append("circle")
-      .attr("class", "dot")
-      .attr("r", 3.5)
-      .attr("cx", function(d) { return x(d.blockHeight); })
-      .attr("cy", function(d) { return y(d.saleValue); })
-      .style("fill", function(d) { return color(d.species); });
-
-  svg.selectAll(".bars_")
-      .data(data)
-    .enter().append("rect")
-      .attr("class", "bars_")
-      .attr("x", (d) => x(d.blockHeight))
-      .attr("y", 0)
-      .attr("width", 2)
-      .attr("height", (d) => y(d.saleValue))
-      .style("fill", (d) => color(d.species));
-
-});
+generateGraph(svg1, _.filter(data, (d) => d.duration == 100), x, y, height / 3)
+generateGraph(svg2, _.filter(data, (d) => d.duration == 400), x, y, height / 3)
+generateGraph(svg3, _.filter(data, (d) => d.duration == 2200), x, y, height / 3)
 
 </script>
